--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ a:link, a:visited {
   color: black;
   background-color: #ffffff;
   text-decoration: none;
-  border-bottom: 2px solid #E4002C;
+  border-bottom: 2px solid #01227E;
 }
 
 a:focus, a:hover, a:active {
